fix line item editor layout on mobile=

--- a/src/styles/components/_LineItemEditor.scss
+++ b/src/styles/components/_LineItemEditor.scss
@@ -1,17 +1,19 @@
 $confirm-buttons-height: 5.625rem;
 
 .LineItemEditor {
+  height: 100%;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
 
   &__inner {
-    height: 100vh;
+    height: 100%;
     border-radius: 0;
     padding-bottom: $confirm-buttons-height;
 
     @include media('md') {
       max-height: 80vh;
+      top: 10vh;
       border-radius: radius('sm');
     }
   }
